@@ -71,8 +71,6 @@ class wxHtmlTableCell : public wxHtmlContainerCell
 protected:
     /* These are real attributes: */
 
-    // should we draw borders or not?
-    bool m_HasBorders;
     // number of columns; rows
     int m_NumCols, m_NumRows;
     // array of column information
@@ -128,8 +126,6 @@ wxHtmlTableCell::wxHtmlTableCell(wxHtmlContainerCell *parent, const wxHtmlTag& t
  : wxHtmlContainerCell(parent)
 {
     m_PixelScale = pixel_scale;
-    m_HasBorders =
-            (tag.HasParam(wxT("BORDER")) && tag.GetParam(wxT("BORDER")) != wxT("0"));
     m_ColsInfo = NULL;
     m_NumCols = m_NumRows = 0;
     m_CellInfo = NULL;
@@ -153,8 +149,20 @@ wxHtmlTableCell::wxHtmlTableCell(wxHtmlContainerCell *parent, const wxHtmlTag& t
     m_Spacing = (int)(m_PixelScale * (double)m_Spacing);
     m_Padding = (int)(m_PixelScale * (double)m_Padding);
 
-    if (m_HasBorders)
-        SetBorder(TABLE_BORDER_CLR_1, TABLE_BORDER_CLR_2);
+    if(tag.HasParam(wxT("BORDER")))
+    {
+        if(tag.GetParam("BORDER").IsEmpty())
+            m_Border = 1;
+        else
+            tag.GetParamAsInt(wxT("BORDER"), &m_Border);
+    }
+    if (m_Border == 1)
+        SetBorder(TABLE_BORDER_CLR_1, TABLE_BORDER_CLR_2, m_Border); // special case see wxHtmlContainerCell::Draw
+    else if (m_Border> 0)
+        SetBorder(TABLE_BORDER_CLR_1, TABLE_BORDER_CLR_2, (int)(m_PixelScale * (double)m_Border));
+    else
+        m_Border = 0;
+
 }
 
 
@@ -339,7 +347,7 @@ void wxHtmlTableCell::AddCell(wxHtmlContainerCell *cell, const wxHtmlTag& tag)
         if (bk.Ok())
             cell->SetBackgroundColour(bk);
     }
-    if (m_HasBorders)
+    if (m_Border > 0)
         cell->SetBorder(TABLE_BORDER_CLR_2, TABLE_BORDER_CLR_1);
 
     // vertical alignment:
@@ -413,7 +421,7 @@ void wxHtmlTableCell::ComputeMinMaxWidths()
     else
         m_MaxTotalWidth = m_MaxTotalWidth * 100 / (100 - percentage);
 
-    m_MaxTotalWidth += (m_NumCols + 1) * m_Spacing;
+    m_MaxTotalWidth += (m_NumCols + 1) * m_Spacing +  2 * m_Border;
 }
 
 void wxHtmlTableCell::Layout(int w)
@@ -461,7 +469,7 @@ void wxHtmlTableCell::Layout(int w)
            The algorithm tries to keep the table size less than w if possible.
        */
     {
-        int wpix = m_Width - (m_NumCols + 1) * m_Spacing;
+        int wpix = m_Width - (m_NumCols + 1) * m_Spacing - 2 * m_Border;  // Available space for cell content
         int i, j;
 
         // 1a. setup fixed-width columns:
@@ -500,7 +508,7 @@ void wxHtmlTableCell::Layout(int w)
             else
                 newWidth = newWidth * 100 / (100 - percentage);
 
-            newWidth = wxMin(newWidth, w - (m_NumCols + 1) * m_Spacing);
+            newWidth = wxMin(newWidth, w - (m_NumCols + 1) * m_Spacing - 2 * m_Border);
             wpix -= m_Width - newWidth;
             m_Width = newWidth;
         }
@@ -514,7 +522,7 @@ void wxHtmlTableCell::Layout(int w)
                 m_ColsInfo[i].pixwidth = wxMin(m_ColsInfo[i].width, 100) * wpix / 100;
 
                 // Make sure to leave enough space for the other columns
-                int minRequired = 0;
+                int minRequired = m_Border;
                 for (j = 0; j < m_NumCols; j++)
                 {
                     if ((m_ColsInfo[j].units == wxHTML_UNITS_PERCENT && j > i) ||
@@ -525,7 +533,7 @@ void wxHtmlTableCell::Layout(int w)
 
                 wtemp -= m_ColsInfo[i].pixwidth;
             }
-        wpix = wtemp;
+       wpix = wtemp; // minimum cells width
 
         // 1d. setup default columns (no width specification supplied):
         // The algorithm assigns calculates the maximum possible width if line
@@ -536,8 +544,8 @@ void wxHtmlTableCell::Layout(int w)
 
         for (i = j = 0; i < m_NumCols; i++)
             if (m_ColsInfo[i].width == 0) j++;
-        if (wpix < 0)
-            wpix = 0;
+        if (wpix < m_Border)
+            wpix = m_Border;
 
         // Assign widths
         for (i = 0; i < m_NumCols; i++)
@@ -575,7 +583,7 @@ void wxHtmlTableCell::Layout(int w)
 
     /* 2.  compute positions of columns: */
     {
-        int wpos = m_Spacing;
+        int wpos = m_Spacing + m_Border;
         for (int i = 0; i < m_NumCols; i++)
         {
             m_ColsInfo[i].leftpos = wpos;
@@ -583,8 +591,8 @@ void wxHtmlTableCell::Layout(int w)
         }
 
         // add the remaining space to the last column
-        if (m_NumCols > 0 && wpos < m_Width)
-            m_ColsInfo[m_NumCols-1].pixwidth += m_Width - wpos;
+        if (m_NumCols > 0 && wpos < m_Width - m_Border)
+            m_ColsInfo[m_NumCols-1].pixwidth += m_Width - wpos - m_Border;
     }
 
     /* 3.  sub-layout all cells: */
@@ -595,7 +603,7 @@ void wxHtmlTableCell::Layout(int w)
         int fullwid;
         wxHtmlContainerCell *actcell;
 
-        ypos[0] = m_Spacing;
+        ypos[0] = m_Spacing + m_Border;
         for (actrow = 1; actrow <= m_NumRows; actrow++) ypos[actrow] = -1;
         for (actrow = 0; actrow < m_NumRows; actrow++)
         {
@@ -637,7 +645,7 @@ void wxHtmlTableCell::Layout(int w)
                 actcell->SetPos(m_ColsInfo[actcol].leftpos, ypos[actrow]);
             }
         }
-        m_Height = ypos[m_NumRows];
+        m_Height = ypos[m_NumRows] + m_Border;
         delete[] ypos;
     }
 
@@ -645,7 +653,7 @@ void wxHtmlTableCell::Layout(int w)
     if (m_NumCols > 0)
     {
         int twidth = m_ColsInfo[m_NumCols-1].leftpos +
-                     m_ColsInfo[m_NumCols-1].pixwidth + m_Spacing;
+                     m_ColsInfo[m_NumCols-1].pixwidth + m_Spacing + m_Border;
         if (twidth > m_Width)
             m_Width = twidth;
     }
